--- a/index.html
+++ b/index.html
@@ -2,31 +2,65 @@
 
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <title>Reservia</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <title>Reservia</title>
+    <script src="https://kit.fontawesome.com/ae69335240.js" crossorigin="anonymous"></script>
+  </head>
 
-<body>
+  <body>
 
-</body>
+    <!--Header & Nav-->
 
-  <!--Header-->
+    <header>
+      <nav>
+        <img src="./images/logo/Reservia@3x.png" alt="Logo">
+        <ul>
+          <li id="hébergement"><a href="#">Hébergements</a></li>
+          <li><a href="#">Activités</a></li>
+          <li id="bold">S'inscrire</li>
+        </ul>
+      </nav>
+    </header>
 
-<header>
-  <nav>
-    <img src="./images/logo/Reservia@3x.png" alt="Logo">
-    <ul>
-      <li>Hébergements</li>
-      <li>Activités</li>
-      <li>S'inscrire</li>
-    </ul>
-  </nav>
-</header>
+    <!--Section 1-->
+
+    <section>
+
+        <!--Intro-->
+        <div id="intro">
+          <h1>Trouver votre hébergement pour des vacances de rêves</h1>
+          <p>En plein centre ville ou en pleine nature</p>
+        </div>
+
+        <!--Searchbar-->
+        <div id="searchbar">
+
+              <span id="icon"><i class="fas fa-map-marker-alt"></i></span>
+              <input id="city" type="text" placeholder="Marseille, France">
+              <button id="search_button" type="button" value="Rechercher">Rechercher</button>
+        
+        </div>
+
+        <!--Filtres-->
+        <div class="filtre">
+            <ul>
+              <li class="list">Filtre</li>
+              <li class="list"><i class="fas fa-money-bill-wave"></i>Economique</li>
+              <li class="list"><i class="fas fa-child"></i>Familial</li>
+              <li class="list"><i class="fas fa-heart"></i>Romantique</li>
+              <li class="list"><i class="fas fa-dog"></i>Animaux autorisés</li>
+            </ul>
+        </div>
+    </section>
+
+
+
+  </body>
 
 </html>
