Add info & css filtres

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <nav>
         <img src="./images/logo/Reservia@3x.png" alt="Logo">
         <ul>
-          <li id="hébergement"><a href="#">Hébergements</a></li>
-          <li><a href="#">Activités</a></li>
+          <li id="hébergement"><a href="">Hébergements</a></li>
+          <li><a href="">Activités</a></li>
           <li id="bold">S'inscrire</li>
         </ul>
       </nav>
@@ -44,18 +44,23 @@
               <span id="icon"><i class="fas fa-map-marker-alt"></i></span>
               <input id="city" type="text" placeholder="Marseille, France">
               <button id="search_button" type="button" value="Rechercher">Rechercher</button>
-        
+
         </div>
 
         <!--Filtres-->
         <div class="filtre">
-            <ul>
-              <li class="list">Filtre</li>
-              <li class="list"><i class="fas fa-money-bill-wave"></i>Economique</li>
-              <li class="list"><i class="fas fa-child"></i>Familial</li>
-              <li class="list"><i class="fas fa-heart"></i>Romantique</li>
-              <li class="list"><i class="fas fa-dog"></i>Animaux autorisés</li>
-            </ul>
+          <p>Filtres</p>
+            <div class="list">
+              <span class="list_item"><a href="#"><i class="fas fa-money-bill-wave"></i> Economique</a></span>
+              <span class="list_item"><a href="#"><i class="fas fa-child"></i> Familial</a> </span>
+              <span class="list_item"><a href="#"><i class="fas fa-heart"></i> Romantique</a> </span>
+              <span class="list_item"><a href="#"><i class="fas fa-dog"></i> Animaux autorisés</a></span>
+            </div>
+        </div>
+
+        <div class="info">
+          <span id="icon_info"><i class="fas fa-info"></i></span>
+          <p>Plus de 500 logements sont disponobles dans cette ville</p>
         </div>
     </section>
 
