Add dossier hébergements & section 2

--- a/index.html
+++ b/index.html
@@ -64,7 +64,90 @@
         </div>
     </section>
 
+    <section id="block">
+      <h2>Hébergements à Marseille</h2>
+      <div class="container">
 
+        <article class="item1">
+          <img src="./images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
+            <h3>Auberge de la Cannebière</h3>
+              <p>Nuit à partir de <strong>25€</strong></p>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span class="grey_star"><i class="fas fa-star"></i></span>
+                </div>
+        </article>
+
+        <article class="item2">
+          <img src="./images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
+            <h3>Hôtel du port</h3>
+              <p>Nuit à partir de 52 <strong>€</strong> </p>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+        </article>
+
+        <article class="item3">
+          <img src="./images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
+            <h3>Hôtel Les mouettes</h3>
+              <p>Nuit à partir de 76<strong>€</strong></p>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span class="grey_star"><i class="fas fa-star"></i></span>
+                </div>
+        </article>
+
+        <article class="item4">
+          <img src="./images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
+            <h3>Hôtel de la mer</h3>
+              <p>Nuit à partir de 46<strong>€</strong></p>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span class="grey_star"><i class="fas fa-star"></i></span>
+                  <span class="grey_star"><i class="fas fa-star"></i></span>
+                </div>
+        </article>
+
+        <article class="item5">
+          <img src="./images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
+            <h3>Auberge Le Panier</h3>
+              <p>Nuit à partir de <strong>23€</strong></p>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span class="grey_star"><i class="fas fa-star"></i></span>
+                </div>
+        </article>
+
+        <article class="item6">
+          <img src="./images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
+            <h3>Hôtel chez Amina</h3>
+              <p>Nuit à partir de 96<strong>€</strong></p>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+        </article>
+
+      </div>
+    </section>
 
   </body>
 
