--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1280px)" href="./css/resolution.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Reservia</title>
@@ -20,10 +21,10 @@
     <header>
       <nav>
         <img src="./images/logo/Reservia@3x.png" alt="Logo">
-        <ul>
-          <li id="hébergement"><a href="">Hébergements</a></li>
+        <ul class="navbar">
+          <li><a href="">Hébergements</a></li>
           <li><a href="">Activités</a></li>
-          <li id="bold">S'inscrire</li>
+          <li class="bold">S'inscrire</li>
         </ul>
       </nav>
     </header>
@@ -146,7 +147,7 @@
         </article>
 
       </div>
-    </section> --> 
+    </section> -->
 
   </body>
 
