--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <nav>
         <img src="./images/logo/Reservia@3x.png" alt="Logo">
         <ul class="navbar">
-          <li><a href="">Hébergements</a></li>
-          <li><a href="">Activités</a></li>
+          <li class="element"><a href="">Hébergements</a></li>
+          <li class="element"><a href="">Activités</a></li>
           <li class="bold">S'inscrire</li>
         </ul>
       </nav>
