--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <header>
       <nav>
         <img src="./images/logo/Reservia@3x.png" alt="Logo">
-        <ul class="navbar">
-          <li class="element"><a href="">Hébergements</a></li>
-          <li class="element"><a href="">Activités</a></li>
-          <li class="bold">S'inscrire</li>
-        </ul>
+        <div class="navbar">
+          <div class="element"><a href="">Hébergements</a></div>
+          <div class="element"><a href="">Activités</a></div>
+          <div><button class="bold" type="button">S'inscrire</button></div>
+        </div>
       </nav>
     </header>
 
