Responsive mobile section1

--- a/index.html
+++ b/index.html
@@ -21,18 +21,15 @@
     <header>
       <nav>
         <img src="./images/logo/Reservia@3x.png" alt="Logo">
-        <div class="navbar">
-          <div class="element"><a href="">Hébergements</a></div>
-          <div class="element"><a href="">Activités</a></div>
-          <div><button class="bold" type="button">S'inscrire</button></div>
-        </div>
+         <ul class="navbar">
+          <li class="element"><a href="">Hébergements</a></li>
+          <li class="element"><a href="">Activités</a></li>
+          <li><button class="bold" type="button">S'inscrire</button></li>
+        </ul>
       </nav>
     </header>
 
-    <!--
-
     <section>
-
 
         <div id="intro">
           <h1>Trouver votre hébergement pour des vacances de rêves</h1>
@@ -40,13 +37,10 @@
         </div>
 
         <div id="searchbar">
-
-              <span id="icon"><i class="fas fa-map-marker-alt"></i></span>
-              <input id="city" type="text" placeholder="Marseille, France">
-              <button id="search_button" type="button" value="Rechercher">Rechercher</button>
-
+          <span id="icon"><i class="fas fa-map-marker-alt"></i></span>
+          <input id="city" type="text" placeholder="Marseille, France">
+          <button id="search_button" type="button" value="Rechercher">Rechercher</button>
         </div>
-
 
         <div class="filtre">
           <p>Filtres</p>
@@ -61,94 +55,104 @@
         <div class="info">
           <span id="icon_info"><i class="fas fa-info"></i></span>
           <p>Plus de 500 logements sont disponobles dans cette ville</p>
-        </div>
+        </div> 
     </section>
 
-    <section id="block">
-      <h2>Hébergements à Marseille</h2>
-      <div class="container">
 
-        <article class="item1">
-          <img src="./images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
-            <h3>Auberge de la Cannebière</h3>
-              <p>Nuit à partir de <strong>25€</strong></p>
-                <div class="star">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span class="grey_star"><i class="fas fa-star"></i></span>
-                </div>
-        </article>
 
-        <article class="item2">
-          <img src="./images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
-            <h3>Hôtel du port</h3>
-              <p>Nuit à partir de 52 <strong>€</strong> </p>
-                <div class="star">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
-        </article>
+<!--
+    <main>
+       <section class="block">
+          <h2>Hébergements à Marseille</h2>
+          <div class="container">
 
-        <article class="item3">
-          <img src="./images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
-            <h3>Hôtel Les mouettes</h3>
-              <p>Nuit à partir de 76<strong>€</strong></p>
-                <div class="star">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span class="grey_star"><i class="fas fa-star"></i></span>
-                </div>
-        </article>
+              <article class="item1">
+                <img src="./images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
+                  <h3>Auberge de la Cannebière</h3>
+                    <p>Nuit à partir de <strong>25€</strong></p>
+                      <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="grey_star"><i class="fas fa-star"></i></span>
+                      </div>
+              </article>
 
-        <article class="item4">
-          <img src="./images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
-            <h3>Hôtel de la mer</h3>
-              <p>Nuit à partir de 46<strong>€</strong></p>
-                <div class="star">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span class="grey_star"><i class="fas fa-star"></i></span>
-                  <span class="grey_star"><i class="fas fa-star"></i></span>
-                </div>
-        </article>
+              <article class="item2">
+                <img src="./images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
+                  <h3>Hôtel du port</h3>
+                    <p>Nuit à partir de 52 <strong>€</strong> </p>
+                      <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+              </article>
 
-        <article class="item5">
-          <img src="./images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
-            <h3>Auberge Le Panier</h3>
-              <p>Nuit à partir de <strong>23€</strong></p>
-                <div class="star">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span class="grey_star"><i class="fas fa-star"></i></span>
-                </div>
-        </article>
+              <article class="item3">
+                <img src="./images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
+                  <h3>Hôtel Les mouettes</h3>
+                    <p>Nuit à partir de 76<strong>€</strong></p>
+                      <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="grey_star"><i class="fas fa-star"></i></span>
+                      </div>
+              </article>
 
-        <article class="item6">
-          <img src="./images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
-            <h3>Hôtel chez Amina</h3>
-              <p>Nuit à partir de 96<strong>€</strong></p>
-                <div class="star">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
-        </article>
+              <article class="item4">
+                <img src="./images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
+                  <h3>Hôtel de la mer</h3>
+                    <p>Nuit à partir de 46<strong>€</strong></p>
+                      <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="grey_star"><i class="fas fa-star"></i></span>
+                        <span class="grey_star"><i class="fas fa-star"></i></span>
+                      </div>
+              </article>
 
-      </div>
-    </section> -->
+              <article class="item5">
+                <img src="./images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
+                  <h3>Auberge Le Panier</h3>
+                    <p>Nuit à partir de <strong>23€</strong></p>
+                      <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="grey_star"><i class="fas fa-star"></i></span>
+                      </div>
+              </article>
 
+              <article class="item6">
+                <img src="./images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
+                  <h3>Hôtel chez Amina</h3>
+                    <p>Nuit à partir de 96<strong>€</strong></p>
+                      <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+              </article>
+
+              <aside class="block">
+                <h2>Les plus populaires</h2>
+                <i class="fas fa-chart-line"></i>
+
+              </aside>
+          </div>
+
+      </section>
+    </main> -->
   </body>
 
 </html>
