--- a/index.html
+++ b/index.html
@@ -2,157 +2,161 @@
 
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" media="screen and (max-width: 1280px)" href="./css/resolution.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Reservia</title>
-    <script src="https://kit.fontawesome.com/ae69335240.js" crossorigin="anonymous"></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 1280px)" href="./css/resolution.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <title>Reservia</title>
+  <script src="https://kit.fontawesome.com/ae69335240.js" crossorigin="anonymous"></script>
+</head>
 
-  <body>
+<body>
 
-    <!--Header & Nav-->
+  <!--Header & Nav-->
 
-    <header>
-      <nav>
-        <img src="./images/logo/Reservia@3x.png" alt="Logo">
-         <ul class="navbar">
-          <li class="element"><a href="">Hébergements</a></li>
-          <li class="element"><a href="">Activités</a></li>
-          <li><button class="bold" type="button">S'inscrire</button></li>
-        </ul>
-      </nav>
-    </header>
+  <header>
+    <nav>
+      <img src="./images/logo/Reservia@3x.png" alt="Logo">
+      <ul class="navbar">
+        <li class="element"><a href="">Hébergements</a></li>
+        <li class="element"><a href="">Activités</a></li>
+        <li><button class="bold" type="button">S'inscrire</button></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section>
+  <section>
 
-        <div id="intro">
-          <h1>Trouver votre hébergement pour des vacances de rêves</h1>
-          <p>En plein centre ville ou en pleine nature</p>
-        </div>
+    <div id="intro">
+      <h1>Trouver votre hébergement pour des vacances de rêves</h1>
+      <p>En plein centre ville ou en pleine nature</p>
+    </div>
 
-        <div id="searchbar">
-          <span id="icon"><i class="fas fa-map-marker-alt"></i></span>
-          <input id="city" type="text" placeholder="Marseille, France">
-          <button id="search_button" type="button" value="Rechercher">Rechercher</button>
-        </div>
+    <div id="searchbar">
+      <span id="icon"><i class="fas fa-map-marker-alt"></i></span>
+      <input id="city" type="text" placeholder="Marseille, France">
+      <button id="search_button" type="button" value="Rechercher">Rechercher</button>
+    </div>
 
-        <div class="filtre">
-          <p>Filtres</p>
-            <div class="list">
-              <span class="list_item"><a href="#"><i class="fas fa-money-bill-wave"></i> Economique</a></span>
-              <span class="list_item"><a href="#"><i class="fas fa-child"></i> Familial</a> </span>
-              <span class="list_item"><a href="#"><i class="fas fa-heart"></i> Romantique</a> </span>
-              <span class="list_item"><a href="#"><i class="fas fa-dog"></i> Animaux autorisés</a></span>
-            </div>
-        </div>
+    <div class="filtre">
+      <p>Filtres</p>
+      <div class="list">
+        <span class="list_item"><a href="#"><i class="fas fa-money-bill-wave"></i>Economique</a></span>
+        <span class="list_item"><a href="#"><i class="fas fa-child"></i> Familial</a> </span>
+        <span class="list_item"><a href="#"><i class="fas fa-heart"></i> Romantique</a> </span>
+        <span class="list_item"><a href="#"><i class="fas fa-dog"></i> Animaux autorisés</a></span>
+      </div>
+    </div>
 
-        <div class="info">
-          <span id="icon_info"><i class="fas fa-info"></i></span>
-          <p>Plus de 500 logements sont disponobles dans cette ville</p>
-        </div> 
+    <div class="info">
+      <span id="icon_info"><i class="fas fa-info"></i></span>
+      <p>Plus de 500 logements sont disponobles dans cette ville</p>
+    </div>
+  </section>
+
+  <main class="main">
+
+    <section class="block">
+      <h2>Hébergements à Marseille</h2>
+      <div class="container">
+
+        <article class="item1">
+          <img src="./images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
+          <h3>Auberge de la Cannebière</h3>
+          <p>Nuit à partir de <strong>25€</strong></p>
+          <div class="star">
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="grey_star"><i class="fas fa-star"></i></div>
+          </div>
+        </article>
+
+        <article class="item2">
+          <img src="./images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
+          <h3>Hôtel du port</h3>
+          <p>Nuit à partir de 52 <strong>€</strong> </p>
+          <div class="star">
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+          </div>
+        </article>
+
+        <article class="item3">
+          <img src="./images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
+          <h3>Hôtel Les mouettes</h3>
+          <p>Nuit à partir de 76<strong>€</strong></p>
+          <div class="star">
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="grey_star"><i class="fas fa-star"></i></div>
+          </div>
+        </article>
+
+        <article class="item4">
+          <img src="./images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
+          <h3>Hôtel de la mer</h3>
+          <p>Nuit à partir de 46<strong>€</strong></p>
+          <div class="star">
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="grey_star"><i class="fas fa-star"></i></div>
+            <div class="grey_star"><i class="fas fa-star"></i></div>
+          </div>
+        </article>
+
+        <article class="item5">
+          <img src="./images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
+          <h3>Auberge Le Panier</h3>
+          <p>Nuit à partir de <strong>23€</strong></p>
+          <div class="star">
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="grey_star"><i class="fas fa-star"></i></div>
+          </div>
+        </article>
+
+        <article class="item6">
+          <img src="./images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
+          <h3>Hôtel chez Amina</h3>
+          <p>Nuit à partir de 96<strong>€</strong></p>
+          <div class="star">
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+            <div class="blue"><i class="fas fa-star"></i></div>
+          </div>
+        </article>
+      </div>
     </section>
 
+    <aside class="populaire">
+      <h2>Les plus populaires</h2>
+      <!-- <i class="fas fa-chart-line"></i> -->
+      <div class="sidebar">
+        <!-- <ul>
+          <li><img src="./images\hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre d'hôtel"></li>
+          <li><img src="./images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre d'hôtel"></li>
+          <li><img src="images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre d'hôtel"></li>
+        </ul> -->
+      </div>
+    </aside>
+  </main>
 
-
-<!--
-    <main>
-       <section class="block">
-          <h2>Hébergements à Marseille</h2>
-          <div class="container">
-
-              <article class="item1">
-                <img src="./images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
-                  <h3>Auberge de la Cannebière</h3>
-                    <p>Nuit à partir de <strong>25€</strong></p>
-                      <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <span class="grey_star"><i class="fas fa-star"></i></span>
-                      </div>
-              </article>
-
-              <article class="item2">
-                <img src="./images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
-                  <h3>Hôtel du port</h3>
-                    <p>Nuit à partir de 52 <strong>€</strong> </p>
-                      <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                      </div>
-              </article>
-
-              <article class="item3">
-                <img src="./images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
-                  <h3>Hôtel Les mouettes</h3>
-                    <p>Nuit à partir de 76<strong>€</strong></p>
-                      <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <span class="grey_star"><i class="fas fa-star"></i></span>
-                      </div>
-              </article>
-
-              <article class="item4">
-                <img src="./images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
-                  <h3>Hôtel de la mer</h3>
-                    <p>Nuit à partir de 46<strong>€</strong></p>
-                      <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <span class="grey_star"><i class="fas fa-star"></i></span>
-                        <span class="grey_star"><i class="fas fa-star"></i></span>
-                      </div>
-              </article>
-
-              <article class="item5">
-                <img src="./images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
-                  <h3>Auberge Le Panier</h3>
-                    <p>Nuit à partir de <strong>23€</strong></p>
-                      <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <span class="grey_star"><i class="fas fa-star"></i></span>
-                      </div>
-              </article>
-
-              <article class="item6">
-                <img src="./images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
-                  <h3>Hôtel chez Amina</h3>
-                    <p>Nuit à partir de 96<strong>€</strong></p>
-                      <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                      </div>
-              </article>
-
-              <aside class="block">
-                <h2>Les plus populaires</h2>
-                <i class="fas fa-chart-line"></i>
-
-              </aside>
-          </div>
-
-      </section>
-    </main> -->
-  </body>
+</body>
 
 </html>
