--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <ul class="navbar">
         <li class="element"><a href="">Hébergements</a></li>
         <li class="element"><a href="">Activités</a></li>
-        <li><button class="bold" type="button">S'inscrire</button></li>
+        <li class="bold">S'inscrire</li>
       </ul>
     </nav>
   </header>
@@ -44,12 +44,12 @@
 
     <div class="filtre">
       <p>Filtres</p>
-      <div class="list">
-        <span class="list_item"><a href="#"><i class="fas fa-money-bill-wave"></i>Economique</a></span>
-        <span class="list_item"><a href="#"><i class="fas fa-child"></i> Familial</a> </span>
-        <span class="list_item"><a href="#"><i class="fas fa-heart"></i> Romantique</a> </span>
-        <span class="list_item"><a href="#"><i class="fas fa-dog"></i> Animaux autorisés</a></span>
-      </div>
+      <ul class="list">
+        <li class="list_item"><a href=""><i class="fas fa-money-bill-wave"></i> Economique</a></li>
+        <li class="list_item"><a href=""><i class="fas fa-child"></i> Familial</a></li>
+        <li class="list_item"><a href=""><i class="fas fa-heart"></i> Romantique</a></li>
+        <li class="list_item"><a href=""><i class="fas fa-dog"></i> Animaux autorisés</a></li>
+      </ul>
     </div>
 
     <div class="info">
@@ -63,123 +63,144 @@
     <section class="block">
       <h2>Hébergements à Marseille</h2>
       <div class="container">
-
         <article>
-          <a href="" class="heberge_link">
+          <a href="">
             <div class="item1">
               <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
               <h3>Auberge de la Cannebière</h3>
               <p>Nuit à partir de <strong>25€</strong></p>
-              <div class="star">
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="grey_star"><i class="fas fa-star"></i></div>
-              </div>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span class="grey_star"><i class="fas fa-star"></i></span>
+                </div>
             </div>
           </a>
         </article>
 
-        <article>
-          <a href="" class="heberge_link">
+         <article>
+          <a href="">
             <div class="item2">
               <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Hôtel du port</h3>
               <p>Nuit à partir de 52 <strong>€</strong> </p>
-              <div class="star">
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-              </div>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
             </div>
           </a>
         </article>
 
-        <article>
-          <a href="" class="heberge_link">
+      <article>
+          <a href="">
             <div class="item3">
               <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Hôtel Les mouettes</h3>
               <p>Nuit à partir de 76<strong>€</strong></p>
-              <div class="star">
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="grey_star"><i class="fas fa-star"></i></div>
-              </div>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span class="grey_star"><i class="fas fa-star"></i></span>
+                </div>
             </div>
           </a>
         </article>
 
         <article>
-          <a href="" class="heberge_link">
+          <a href="">
             <div class="item4">
               <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Hôtel de la mer</h3>
               <p>Nuit à partir de 46<strong>€</strong></p>
-              <div class="star">
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="grey_star"><i class="fas fa-star"></i></div>
-                <div class="grey_star"><i class="fas fa-star"></i></div>
-              </div>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span class="grey_star"><i class="fas fa-star"></i></span>
+                  <span class="grey_star"><i class="fas fa-star"></i></span>
+                </div>
             </div>
           </a>
         </article>
 
         <article>
-          <a href="" class="heberge_link">
+          <a href="">
             <div class="item5">
               <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Auberge Le Panier</h3>
               <p>Nuit à partir de <strong>23€</strong></p>
-              <div class="star">
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="grey_star"><i class="fas fa-star"></i></div>
-              </div>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span class="grey_star"><i class="fas fa-star"></i></span>
+                </div>
             </div>
           </a>
         </article>
 
         <article>
-          <a href="" class="heberge_link">
+          <a href="">
             <div class="item6">
               <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Hôtel chez Amina</h3>
               <p>Nuit à partir de 96<strong>€</strong></p>
-              <div class="star">
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-                <div class="blue"><i class="fas fa-star"></i></div>
-              </div>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
             </div>
           </a>
         </article>
-        <a href="#">Afficher plus</a>
+        <a href="">Afficher plus</a>
       </div>
     </section>
 
-    <!-- <aside class="populaire">
-      <h2>Les plus populaires</h2>
-     <i class="fas fa-chart-line"></i>
-      <div class="sidebar">
-       <ul>
-          <li><img src="./images\hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre d'hôtel"></li>
-          <li><img src="./images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre d'hôtel"></li>
-          <li><img src="images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre d'hôtel"></li>
-        </ul>
+     <aside>
+      <div class="populaires">
+        <h2>Les plus populaires</h2>
+         <i class="fas fa-chart-line"></i>
       </div>
-    </aside> -->
+      <div class="sidebar">
+         <div class="under_sidebar">
+           <div class="under_sidebar-item">
+             <a href="">
+               <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre d'hôtel">
+               <h3></h3>
+               <p></p>
+             </a>
+           </div>
+
+           <div class="under_sidebar-item">
+             <a href="">
+               <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre d'hôtel">
+               <h3></h3>
+               <p></p>
+             </a>
+           </div>
+
+           <div class="under_sidebar-item">
+             <a href="">
+               <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre d'hôtel">
+               <h3></h3>
+               <p></p>
+             </a>
+           </div>
+         </div>
+      </div>
+    </aside>
 
 
   </main>
