--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
       <h2>Hébergements à Marseille</h2>
       <div class="container">
         <article>
-          <a href="">
-            <div class="item1">
+          <a href="" class="item1">
+            <div>
               <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
-              <h3>Auberge de la Cannebière</h3>
+              <h3>Auberge la Cannebière</h3>
               <p>Nuit à partir de <strong>25€</strong></p>
                 <div class="star">
                   <i class="fas fa-star"></i>
@@ -81,11 +81,11 @@
         </article>
 
          <article>
-          <a href="">
-            <div class="item2">
+          <a href="" class="item2">
+            <div>
               <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Hôtel du port</h3>
-              <p>Nuit à partir de 52 <strong>€</strong> </p>
+              <p>Nuit à partir de 52<strong>€</strong> </p>
                 <div class="star">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -98,8 +98,8 @@
         </article>
 
       <article>
-          <a href="">
-            <div class="item3">
+          <a href="" class="item3">
+            <div>
               <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Hôtel Les mouettes</h3>
               <p>Nuit à partir de 76<strong>€</strong></p>
@@ -115,8 +115,8 @@
         </article>
 
         <article>
-          <a href="">
-            <div class="item4">
+          <a href="" class="item4">
+            <div>
               <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Hôtel de la mer</h3>
               <p>Nuit à partir de 46<strong>€</strong></p>
@@ -132,8 +132,8 @@
         </article>
 
         <article>
-          <a href="">
-            <div class="item5">
+          <a href="" class="item5">
+            <div>
               <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Auberge Le Panier</h3>
               <p>Nuit à partir de <strong>23€</strong></p>
@@ -149,8 +149,8 @@
         </article>
 
         <article>
-          <a href="">
-            <div class="item6">
+          <a href="" class="item6">
+            <div>
               <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Hôtel chez Amina</h3>
               <p>Nuit à partir de 96<strong>€</strong></p>
@@ -164,7 +164,9 @@
             </div>
           </a>
         </article>
-        <a href="">Afficher plus</a>
+
+        <a href="" class="link">Afficher plus</a>
+
       </div>
     </section>
 
@@ -175,27 +177,54 @@
       </div>
       <div class="sidebar">
          <div class="under_sidebar">
-           <div class="under_sidebar-item">
-             <a href="">
+           <div>
+             <a href="" class="under_sidebar-item">
                <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre d'hôtel">
-               <h3></h3>
-               <p></p>
+               <div class="right">
+                 <h3>Hôtel Le soleil du  <br> matin</h3>
+                 <p>Nuit à partir de 128<strong>€</strong></p>
+                   <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                   </div>
+               </div>
              </a>
            </div>
 
-           <div class="under_sidebar-item">
-             <a href="">
+           <div>
+             <a href="" class="under_sidebar-item">
                <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre d'hôtel">
-               <h3></h3>
-               <p></p>
+               <div class="right">
+                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                 <p>Nuit à partir de 71<strong>€</strong></p>
+                   <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <span class="grey_star"><i class="fas fa-star"></i></span>
+                   </div>
+               </div>
              </a>
            </div>
 
-           <div class="under_sidebar-item">
-             <a href="">
+           <div>
+             <a href="" class="under_sidebar-item">
                <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre d'hôtel">
-               <h3></h3>
-               <p></p>
+               <div class="right">
+                 <h3>Hôtel Tout bleu et <br>Blanc</h3>
+                 <p>Nuit à partir de 68<strong>€</strong></p>
+                   <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <span class="grey_star"><i class="fas fa-star"></i></span>
+                   </div>
+               </div>
              </a>
            </div>
          </div>
