--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="searchbar">
       <span id="icon"><i class="fas fa-map-marker-alt"></i></span>
       <input id="city" type="text" placeholder="Marseille, France">
-      <button id="search_button" type="button" value="Rechercher">Rechercher</button>
+      <button id="search_button" type="button"><span>Rechercher</span><i class="fas fa-search"></i></button>
     </div>
 
     <div class="filtre">
