--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
   <main class="main">
 
-    <section class="block">
+    <section class="section1">
       <h2>Hébergements à Marseille</h2>
       <div class="container">
         <article>
           <a href="" class="item1">
-            <div>
+            <div class="block">
               <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
               <h3>Auberge la Cannebière</h3>
               <p>Nuit à partir de <strong>25€</strong></p>
@@ -82,7 +82,7 @@
 
          <article>
           <a href="" class="item2">
-            <div>
+            <div class="block">
               <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Hôtel du port</h3>
               <p>Nuit à partir de 52<strong>€</strong> </p>
@@ -99,7 +99,7 @@
 
       <article>
           <a href="" class="item3">
-            <div>
+            <div class="block">
               <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Hôtel Les mouettes</h3>
               <p>Nuit à partir de 76<strong>€</strong></p>
@@ -116,7 +116,7 @@
 
         <article>
           <a href="" class="item4">
-            <div>
+            <div class="block">
               <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Hôtel de la mer</h3>
               <p>Nuit à partir de 46<strong>€</strong></p>
@@ -133,7 +133,7 @@
 
         <article>
           <a href="" class="item5">
-            <div>
+            <div class="block">
               <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Auberge Le Panier</h3>
               <p>Nuit à partir de <strong>23€</strong></p>
@@ -150,7 +150,7 @@
 
         <article>
           <a href="" class="item6">
-            <div>
+            <div class="block">
               <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
               <h3>Hôtel chez Amina</h3>
               <p>Nuit à partir de 96<strong>€</strong></p>
@@ -230,9 +230,56 @@
          </div>
       </div>
     </aside>
-
-
   </main>
+<!--
+  <section>
+    <h2>Activités à Marseilles</h2>
+    <div class="section2">
+      <article>
+        <a href="" class="large">
+          <img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Port">
+        </a>
+      </article>
+
+      <div class="column">
+        <article>
+          <a href="" class="medium">
+            <img src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Château fort">
+          </a>
+        </article>
+
+        <article>
+          <a href="" class="small">
+            <img src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Ile du frioul">
+          </a>
+        </article>
+      </div>
+
+      <article>
+        <a href="" class="large">
+          <img src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
+        </a>
+      </article>
+
+      <div class="column">
+        <article>
+          <a href="" class="moyen">
+            <img src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
+          </a>
+        </article>
+
+        <article>
+          <a href="" class="moyen">
+            <img src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
+          </a>
+        </article>
+      </div>
+    </div>
+  </section> -->
+
+  <footer>
+
+  </footer>
 
 </body>
 
