Modif taille + vignette

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
       <div class="container">
         <article>
           <a href="" class="item1">
-            <div class="block">
-              <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
+            <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
               <h3>Auberge la Cannebière</h3>
               <p>Nuit à partir de <strong>25€</strong></p>
                 <div class="star">
@@ -76,111 +75,99 @@
                   <i class="fas fa-star"></i>
                   <span class="grey_star"><i class="fas fa-star"></i></span>
                 </div>
-            </div>
           </a>
         </article>
 
          <article>
           <a href="" class="item2">
-            <div class="block">
-              <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
-              <h3>Hôtel du port</h3>
-              <p>Nuit à partir de 52<strong>€</strong> </p>
-                <div class="star">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
-            </div>
+            <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
+            <h3>Hôtel du port</h3>
+            <p>Nuit à partir de 52<strong>€</strong> </p>
+              <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
           </a>
         </article>
 
-      <article>
+        <article>
           <a href="" class="item3">
-            <div class="block">
-              <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
-              <h3>Hôtel Les mouettes</h3>
-              <p>Nuit à partir de 76<strong>€</strong></p>
-                <div class="star">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span class="grey_star"><i class="fas fa-star"></i></span>
-                </div>
-            </div>
-          </a>
-        </article>
+            <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
+            <h3>Hôtel Les mouettes</h3>
+            <p>Nuit à partir de 76<strong>€</strong></p>
+              <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span class="grey_star"><i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </article>
 
-        <article>
-          <a href="" class="item4">
-            <div class="block">
-              <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
-              <h3>Hôtel de la mer</h3>
-              <p>Nuit à partir de 46<strong>€</strong></p>
-                <div class="star">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span class="grey_star"><i class="fas fa-star"></i></span>
-                  <span class="grey_star"><i class="fas fa-star"></i></span>
-                </div>
-            </div>
-          </a>
-        </article>
+          <article>
+            <a href="" class="item4">
+                <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
+                <h3>Hôtel de la mer</h3>
+                <p>Nuit à partir de 46<strong>€</strong></p>
+                  <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <span class="grey_star"><i class="fas fa-star"></i></span>
+                    <span class="grey_star"><i class="fas fa-star"></i></span>
+                  </div>
+            </a>
+          </article>
 
-        <article>
-          <a href="" class="item5">
-            <div class="block">
-              <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
-              <h3>Auberge Le Panier</h3>
-              <p>Nuit à partir de <strong>23€</strong></p>
-                <div class="star">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span class="grey_star"><i class="fas fa-star"></i></span>
-                </div>
-            </div>
-          </a>
-        </article>
+          <article>
+            <a href="" class="item5">
+                <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
+                <h3>Auberge Le Panier</h3>
+                <p>Nuit à partir de <strong>23€</strong></p>
+                  <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <span class="grey_star"><i class="fas fa-star"></i></span>
+                  </div>
+            </a>
+          </article>
 
-        <article>
-          <a href="" class="item6">
-            <div class="block">
-              <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
-              <h3>Hôtel chez Amina</h3>
-              <p>Nuit à partir de 96<strong>€</strong></p>
-                <div class="star">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
-            </div>
-          </a>
-        </article>
+          <article>
+            <a href="" class="item6">
+                <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
+                <h3>Hôtel chez Amina</h3>
+                <p>Nuit à partir de 96<strong>€</strong></p>
+                  <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                  </div>
+            </a>
+          </article>
 
-        <a href="" class="link">Afficher plus</a>
-
+        <div class="link">
+          <a href="">Afficher plus</a>
+        </div>
       </div>
     </section>
 
-     <aside>
+     <!-- <aside>
       <div class="populaires">
         <h2>Les plus populaires</h2>
          <i class="fas fa-chart-line"></i>
       </div>
       <div class="sidebar">
-         <div class="under_sidebar">
-           <div>
-             <a href="" class="under_sidebar-item">
-               <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre d'hôtel">
-               <div class="right">
+        <a href="">
+          <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre d'hôtel">
+              <div class="right">
                  <h3>Hôtel Le soleil du  <br> matin</h3>
                  <p>Nuit à partir de 128<strong>€</strong></p>
                    <div class="star">
@@ -190,12 +177,11 @@
                      <i class="fas fa-star"></i>
                      <i class="fas fa-star"></i>
                    </div>
-               </div>
              </a>
            </div>
 
            <div>
-             <a href="" class="under_sidebar-item">
+             <a href="">
                <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre d'hôtel">
                <div class="right">
                  <h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -211,8 +197,7 @@
              </a>
            </div>
 
-           <div>
-             <a href="" class="under_sidebar-item">
+             <a href="">
                <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre d'hôtel">
                <div class="right">
                  <h3>Hôtel Tout bleu et <br>Blanc</h3>
@@ -226,10 +211,8 @@
                    </div>
                </div>
              </a>
-           </div>
-         </div>
       </div>
-    </aside>
+    </aside> -->
   </main>
 <!--
   <section>
