--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" media="screen and (max-width: 1280px)" href="./css/resolution.css" />
+  <link rel="stylesheet" media="screen and (max-width: 1500px)" href="./css/resolution.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <title>Reservia</title>
@@ -66,30 +66,30 @@
         <article>
           <a href="" class="item1">
             <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
-              <h3>Auberge la Cannebière</h3>
-              <p>Nuit à partir de <strong>25€</strong></p>
-                <div class="star">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span class="grey_star"><i class="fas fa-star"></i></span>
-                </div>
+            <h3>Auberge la Cannebière</h3>
+            <p>Nuit à partir de <strong>25€</strong></p>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span class="grey_star"><i class="fas fa-star"></i></span>
+            </div>
           </a>
         </article>
 
-         <article>
+        <article>
           <a href="" class="item2">
             <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
             <h3>Hôtel du port</h3>
             <p>Nuit à partir de 52<strong>€</strong> </p>
-              <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-              </div>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
           </a>
         </article>
 
@@ -98,68 +98,68 @@
             <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
             <h3>Hôtel Les mouettes</h3>
             <p>Nuit à partir de 76<strong>€</strong></p>
-              <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <span class="grey_star"><i class="fas fa-star"></i></span>
-              </div>
-            </a>
-          </article>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span class="grey_star"><i class="fas fa-star"></i></span>
+            </div>
+          </a>
+        </article>
 
-          <article>
-            <a href="" class="item4">
-                <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
-                <h3>Hôtel de la mer</h3>
-                <p>Nuit à partir de 46<strong>€</strong></p>
-                  <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <span class="grey_star"><i class="fas fa-star"></i></span>
-                    <span class="grey_star"><i class="fas fa-star"></i></span>
-                  </div>
-            </a>
-          </article>
+        <article>
+          <a href="" class="item4">
+            <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
+            <h3>Hôtel de la mer</h3>
+            <p>Nuit à partir de 46<strong>€</strong></p>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span class="grey_star"><i class="fas fa-star"></i></span>
+              <span class="grey_star"><i class="fas fa-star"></i></span>
+            </div>
+          </a>
+        </article>
 
-          <article>
-            <a href="" class="item5">
-                <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
-                <h3>Auberge Le Panier</h3>
-                <p>Nuit à partir de <strong>23€</strong></p>
-                  <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <span class="grey_star"><i class="fas fa-star"></i></span>
-                  </div>
-            </a>
-          </article>
+        <article>
+          <a href="" class="item5">
+            <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
+            <h3>Auberge Le Panier</h3>
+            <p>Nuit à partir de <strong>23€</strong></p>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span class="grey_star"><i class="fas fa-star"></i></span>
+            </div>
+          </a>
+        </article>
 
-          <article>
-            <a href="" class="item6">
-                <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
-                <h3>Hôtel chez Amina</h3>
-                <p>Nuit à partir de 96<strong>€</strong></p>
-                  <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </div>
-            </a>
-          </article>
+        <article>
+          <a href="" class="item6">
+            <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
+            <h3>Hôtel chez Amina</h3>
+            <p>Nuit à partir de 96<strong>€</strong></p>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </a>
+        </article>
+      </div>
 
-        <div class="link">
-          <a href="">Afficher plus</a>
-        </div>
+      <div class="link">
+        <a href="">Afficher plus</a>
       </div>
     </section>
 
-     <!-- <aside>
+    <aside>
       <div class="populaires">
         <h2>Les plus populaires</h2>
          <i class="fas fa-chart-line"></i>
@@ -177,14 +177,13 @@
                      <i class="fas fa-star"></i>
                      <i class="fas fa-star"></i>
                    </div>
+                </div>
              </a>
-           </div>
 
-           <div>
              <a href="">
                <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre d'hôtel">
                <div class="right">
-                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                 <h3>Au coeur de l'eau <br>Chambres d'hôtes</h3>
                  <p>Nuit à partir de 71<strong>€</strong></p>
                    <div class="star">
                      <i class="fas fa-star"></i>
@@ -195,7 +194,6 @@
                    </div>
                </div>
              </a>
-           </div>
 
              <a href="">
                <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre d'hôtel">
@@ -212,9 +210,9 @@
                </div>
              </a>
       </div>
-    </aside> -->
+    </aside>
   </main>
-<!--
+  <!--
   <section>
     <h2>Activités à Marseilles</h2>
     <div class="section2">
